--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Art Gallery</title>
   <link rel="stylesheet" type="text/css" href="bootstrap-sass-3.3.5/assets/css/_bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="css/_bootstrap.css">
   <script src="js/modernizr.js"></script> 
   <script src="https://code.angularjs.org/1.4.2/angular.min.js"></script>
   <script src="https://code.angularjs.org/1.4.2/angular-route.min.js"></script>
@@ -15,22 +14,21 @@
   <script src="app/controllers/galleryworkscontroller.js"></script>
   <script src="app/controllers/galleryitemcontroller.js"></script>
   <script src="app/controllers/gallerywelcomecontroller.js"></script>
-
+  <script src="app/controllers/galleryadmincontroller.js"></script>
 </head>
 
 <body>
   <main class="wrap group">
     <aside class="sidebar">
      <div class="my-info">
-      <img src="images/corner_sm.png" alt="" class="">
+      <img src="images/corner_sm.png" alt="site logo">
       <h1>Art Gallery</h1>
       <h2>Welcome</h2>
     </div>
     <div class="menus">
-      <h3 class="home"><a href="#/welcome">Home</a></h3>
+      <h3 class="home"><a href="#/welcome">Home</a></h3> 
       <h3 class="works"><a href="#/works">Works</a></h3>
-      <h3 class="about"><a href="#">About</a></h3>
-      <h3 class="shows"><a href="#">Shows</a></h3 >
+      <h3 class="admin"><a href="#/admin">Admin</a></h3 >
     </div>
   </aside>
 
