--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <link rel="shortcut icon" href="favicon.ico" >
+    <link rel="icon" type="image/gif" href="animated_favicon1.gif" >
 
   <title>Art Gallery</title>
   <link rel="stylesheet" type="text/css" href="bootstrap-sass-3.3.5/assets/css/_bootstrap.css">
@@ -11,7 +13,7 @@
   <script src="https://code.angularjs.org/1.4.2/angular.min.js"></script>
   <script src="https://code.angularjs.org/1.4.2/angular-route.min.js"></script>
   <script src="https://cdn.firebase.com/js/client/2.2.2/firebase.js"></script>
-  <script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
+  <script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
   <script type="text/javascript" src="//api.filepicker.io/v2/filepicker.js"></script>  
 
   <script src="app/app.js"></script>
@@ -20,12 +22,19 @@
   <script src="app/controllers/galleryhomecontroller.js"></script>
   <script src="app/controllers/galleryadmincontroller.js"></script>
   <script src="app/controllers/gallerylogincontroller.js"></script>
+  <script src="app/controllers/gallerymenucontroller.js"></script>
+  <script src="app/controllers/gallerycartcontroller.js"></script>
   <script src="app/services/authentication.js"></script>
+  <script src="app/services/mediumservice.js"></script>    
+  <script src="app/services/shoppingcartservice.js"></script>   
 </head>
 
-<body ng-app="galleryApp">
+  <nav class="navbar navbar-default navbar-fixed-top"
+      ng-controller="galleryLoginController"
+      ng-include="'app/partials/navigation.html'">
+  </nav>  
 
-  <nav class="controlbar" ng-include="'app/partials/navigation.html'"></nav>  
+<body ng-app="galleryApp">
 
   <main class="wrap group">
     <aside class="sidebar">
@@ -34,10 +43,10 @@
       <h1>Gallery</h1>
       <h2>Discard Art</h2>    
     </div>
-    <div class="menus">
+    <div class="menus" ng-controller="galleryMenuController">
       <h3 class="home"><a href="#/home">Home</a></h3> 
       <h3 class="works"><a href="#/works">Works</a></h3>
-      <h3 class="admin"><a href="#/admin">Admin</a></h3 >
+      <h3 class="admin" ng-show="role == 'Admin'"><a href="#/admin">Admin</a></h3 >
     </div>
   </aside>
 
